--- a/client/siteace.css
+++ b/client/siteace.css
@@ -2,3 +2,25 @@
 .hidden_div{
 	display:none;
 }
+.default_hide {
+	display: none;
+}
+
+#website_form, #website_list {
+	margin: 1em 0 2em 0;
+}
+
+#website_list li {
+	margin-bottom: 1.5em;
+}
+
+.votes {
+	display: inline-block;
+	min-width: 2em;
+	font-weight: bold;
+}
+
+.timeago {
+	margin: 0.2em 0;
+	font-size: 0.8em;
+}
